tests/errors/preprocessor/015_branch.c.expect
./tests/errors/preprocessor/015_branch.c:1:9: error: unexpected end-of-file in preprocessor expression
1 | #elifndef
            ^
